--- a/isotoma/recipe/pound/pound.cfg
+++ b/isotoma/recipe/pound/pound.cfg
@@ -32,7 +32,7 @@ ListenHTTP
     #if $getVar('session', None)
         Session
             Type $session['type']
-            ID $session['id']
+            ID "$session['id']"
             TTL $session['ttl']
         End
     #end if
