--- a/isotoma/recipe/pound/pound.cfg
+++ b/isotoma/recipe/pound/pound.cfg
@@ -29,11 +29,11 @@ ListenHTTP
             Port $emergency['port']
         End
     #end if
-    #if $getVar('session', None)
+    #if $getVar('affinity', None)
         Session
-            Type $session['type']
-            ID "$session['id']"
-            TTL $session['ttl']
+            Type $affinity['type']
+            ID "$affinity['id']"
+            TTL $affinity['ttl']
         End
     #end if
     End
