Add namevirtualhost parameter (like apache recipe)

--- a/isotoma/recipe/pound/apache.conf
+++ b/isotoma/recipe/pound/apache.conf
@@ -5,7 +5,7 @@ Listen ${port}
 #end if
 
 #for $i in $interfaces
-#if $listen
+#if $namevirtualhost
 NameVirtualHost ${i.interface}:${i.port}
 #end if
 
