Make emergency page generation SSL aware

--- a/isotoma/recipe/pound/apache.conf
+++ b/isotoma/recipe/pound/apache.conf
@@ -22,6 +22,17 @@ NameVirtualHost ${i.interface}:${i.port}
     RewriteCond %{DOCUMENT_ROOT}%{REQUEST_FILENAME} !-f
     RewriteRule ^(.*)$ /index.html
 
+    #if $i.ssl    
+    SSLEngine on
+    SSLCipherSuite ALL:!ADH:!EXPORT56:RC4+RSA:+HIGH:+MEDIUM:+LOW:+SSLv2:+EXP:+eNULL
+    SSLCertificateFile ${sslcert}
+    SSLCertificateKeyFile ${sslkey}
+    #for $a in $sslca
+    SSLCACertificateFile ${a}
+    #end for
+    
+    #end if    
+    
     Header set Cache-Control "max-age=0, private, must-revalidate, no-cache"
 
 </VirtualHost>
