Add enhanced-privacy and logformat options

--- a/isotoma/recipe/pound/apache.conf
+++ b/isotoma/recipe/pound/apache.conf
@@ -15,8 +15,12 @@ NameVirtualHost ${i.interface}:${i.port}
     #end if
     DocumentRoot ${htdocs}
 
-    CustomLog ${access_log} Combined
+    CustomLog ${access_log} ${logformat}
+#if $getVar('enhanced-privacy', None)
+    ErrorLog "|/usr/bin/awk \"'\"'{$8=\"0.0.0.0]\"; print}'\"'\" >> ${error_log}"
+#else
     ErrorLog ${error_log}
+#end if
 
     RewriteEngine On
     RewriteCond %{DOCUMENT_ROOT}%{REQUEST_FILENAME} !-f
