--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,4 +1,5 @@
 [buildout]
+allow-picked-versions = false
 parts = test
 develop = .
 versions = versions
@@ -11,3 +12,7 @@ eggs = isotoma.recipe.portmap
 zc.buildout = 1.4.3
 zc.recipe.testrunner = 1.3.0
 zc.recipe.egg = 1.2.3b2
+zope.testrunner = 4.0.3
+zope.interface = 3.7.0
+zope.exceptions = 3.6.1
+isotoma.recipe.portmap = 0.0.0
