--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,12 +1,35 @@
 [buildout]
 allow-picked-versions = false
-parts = test
+parts =
+    test
+    pound
+    cycle
 develop = .
 versions = versions
 
 [test]
 recipe = zc.recipe.testrunner
-eggs = isotoma.recipe.portmap
+eggs = isotoma.recipe.pound
+
+[pound]
+recipe = isotoma.recipe.pound
+address = 127.0.0.1
+port = 8079
+backends =
+    127.0.0.1:8080
+    127.0.0.1:8081
+    127.0.0.1:8082
+control = ${buildout:parts-directory}/pound.ctl
+pidfile = ${buildout:parts-directory}/pound.pid
+
+[cycle]
+recipe = isotoma.recipe.pound:cycle
+grace = 1
+backends =
+    /bin/true:/bin/true
+    /bin/true:/bin/true
+    /bin/true:/bin/true
+control = ${pound:control}
 
 [versions]
 zc.buildout = 1.4.3
@@ -16,4 +39,6 @@ zc.recipe.egg = 1.2.3b2
 zope.testrunner = 4.0.3
 zope.interface = 3.7.0
 zope.exceptions = 3.6.1
-isotoma.recipe.portmap = 0.0.0
+isotoma.recipe.gocaptain = 0.0.9
+Cheetah = 2.4.4
+Markdown = 2.1.1
