Cycle script can now wake up backends by poking URLs

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,5 +11,7 @@ install:
 script:
   - ./bin/test
   - sudo ./bin/pound start
+  - sudo ./bin/cycle
+  - sudo ./bin/cycle-nowakeup
   - sudo ./bin/pound stop
 
