--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,15 @@
 language: python
 
+env:
+  - PYTHON=python2.4
+  - PYTHON=python2.6
+
 before_install:
   - sudo apt-get update
   - sudo apt-get install -y -q pound
 
 install:
-  - python bootstrap.py
+  - $PYTHON bootstrap.py
   - ./bin/buildout
 
 script:
