--- a/isotoma/recipe/pound/pound.cfg
+++ b/isotoma/recipe/pound/pound.cfg
@@ -15,6 +15,9 @@ ListenHTTP
 #if $getVar('err500', None)
     Err500  "${err500}"
 #end if
+#if $getVar('err503', None)
+    Err503  "${err503}"
+#end if
     xHTTP   ${xHTTP}
     Service
     #for $b in $backends
